# jemaro_days_2025

./: .gitignore  README.md
car_control/: CMakeLists.txt  package.xml
car_control/launch/: car_control.launch.py
car_control/script/: pure_pursuit.py
data/paths_Prius/path_left_prius/: metadata.yaml  rosbag2_2025_07_04-13_57_07_0.db3
data/paths_Prius/path_prius/: metadata.yaml  rosbag2_2025_07_06-23_02_21_0.db3
data/paths_Prius/path_right_prius/: metadata.yaml  rosbag2_2025_07_04-13_54_51_0.db3
data/paths_Zoe/path_left_zoe/: metadata.yaml  path_left_zoe_0.db3
data/paths_Zoe/path_right_zoe/: metadata.yaml  path_right_zoe_0.db3
data/paths_Zoe/path_zoe/: metadata.yaml  path_zoe_0.db3
obstacle_detection/: CMakeLists.txt  README.md  package.xml
obstacle_detection/config/: dataset_real.rviz  obstacle_detection.rviz  obstacle_params.yaml  real.rviz  real_ferdinand.rviz  realcar.rviz
obstacle_detection/launch/: launch_obstacle_detection_real.launch.py  launch_real.launch.py  obstacle_detection_real.launch.py  real.launch.py  sim.launch.py
obstacle_detection/src/: obstacle_detection.cpp  obstacle_detection_node.cpp
odom_bag_to_path/: CMakeLists.txt  package.xml
odom_bag_to_path/launch/: odom_bag_to_path.launch.py
odom_bag_to_path/script/: odom_bag_to_path_py.py
osrf_car_demo/car_demo/launch/: demo.launch.py  demo2.launch.py  spawn_prius.launch.py  spawn_prius2.launch.py  straight_road_light.launch.py
osrf_car_demo/car_demo/models/asphalt_plane/: model-1_4.sdf  model.sdf
osrf_car_demo/car_demo/models/grass_plane/: model.config  model.sdf
osrf_car_demo/car_demo/models/road_border/: model.config  model.sdf
osrf_car_demo/car_demo/rviz/: prius2.rviz
osrf_car_demo/car_demo/worlds/: straight_road.world  straight_road_light.world
osrf_car_demo/prius_description/urdf/: prius.urdf  prius2.urdf
path_planning/: package.xml  setup.py
path_planning/launch/: path_planning.launch.py
path_planning/path_planning/: dubins.py  map_publisher.py  path_planning.py
pointcloud_downsampling/: package.xml
pointcloud_downsampling/config/: pointcloud_downsampling.yaml
pointcloud_downsampling/include/: pointcloud_downsampling.h
pointcloud_downsampling/src/: voxel_filtering.cpp
twist_to_prius_cmd/: CMakeLists.txt  package.xml
twist_to_prius_cmd/launch/: twist_to_prius_cmd.launch.py
twist_to_prius_cmd/script/: twist_to_prius_cmd.py
