<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
<!--  TODO your package name -->
  <name>odom_bag_to_path</name>
  <version>0.1.0</version>
  <description>This package does great things</description>
  <maintainer email="e@mail.fr">Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
<!--  list the required ROS 2 dependencies  -->
  <depend>rclpy</depend>
  <!--depend>my_msgs</depend-->
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
